external-crates/move/crates/move-compiler/tests/move_2024/matching/guard_invalid_copy.exp
error[E01002]: unexpected token
   ┌─ tests/move_2024/matching/guard_invalid_copy.move:17:32
   │
17 │             Option::Some(n) if check_s(n) => n,
   │                                ^^^^^^^
   │                                │
   │                                Unexpected 'check_s'
   │                                Expected '('

error[E01002]: unexpected token
   ┌─ tests/move_2024/matching/guard_invalid_copy.move:26:32
   │
26 │             Option::Some(n) if check_s(copy n) => n,
   │                                ^^^^^^^
   │                                │
   │                                Unexpected 'check_s'
   │                                Expected '('

